Actualicé index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section id="inicio">
             <h2>Inicio</h2>
             <h3>Bienvenidos</h3>
-            <p>Hola, soy <strong>Cynthia Fernandez</strong>, una madre que ama dar clases.
+            <p>Hola, soy <strong>Cynthia Fernandez</strong>, una madre que ama dar clases.</p>
         </section>
 
         <!--SECCION AGENDA-->
@@ -67,12 +67,12 @@
             <label>Materia:</label><br>
             <input type="text" id="materia" required><br><br>
 
-            <lable>Fecha y hora: </lable><br>
+            <label>Fecha y hora:</label>
             <input type="datetime-local" id="fecha" required><br><br>
 
             <input type="submit" value="Inscribirse">
 
-        </from>
+        </form>
         </section>
 
 
