Actualice "index.html"

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <header>
         <h1>Agenda de Clases particulares</h1>
         <p> Aprende de forma facil y organizada </p>
-        <nav> <!--BLOQUE DE NAVEGACION-->
-            <a href="#inicio">Inicio</a>
-            <a href="#agenda">Agenda</a>
-            <a href="#inscripcion">Inscripcion</a>
-            <a href="#contacto">Contacto</a>
+        <nav>
+        <a href="index.html">Inicio</a>
+        <a href="agenda.html">Agenda</a>
+        <a href="inscripcion.html">Inscripción</a>
+        <a href="pendientes.html">Pendientes</a>
+        <a href="contacto.html">Contacto</a>
         </nav>
+
     </header>
     
     <!--Contenido principal-->
